--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,16 @@
+<html>
+    <head>
+        <title>Sound graph</title>
+        <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+        <script type="text/javascript">
+            var socket = io();
+            io.on('message', function(message){
+                console.log(message);
+            });
+        </script>
+    </head>
+    <body>
 
+    </body>
+</html>
