Incoming/Outgoing sounds

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,6 @@
             }))
         }
       function play_sound(size, type, volume) {
-		console.log(size+" "+type+" "+volume);
 		var max_pitch = 100.0;
 		var log_used = 1.0715307808111486871978099;
 		var pitch = 100 - Math.min(max_pitch, Math.log(size + log_used) / Math.log(log_used));
@@ -71,7 +70,7 @@
 		index = Math.max(1, index);
 		if (current_notes < note_overlap) {
 			current_notes++;
-			if (type == 'add') {
+			if (type == 'incoming') {
 				celesta[index].play();
 			} else {
 				clav[index].play();
